kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  selector:
    app: my-app
  type: NodePort
  ports:
    - port: 8000        # port inside cluster
      targetPort: 8000  # container port
      nodePort: 30080   # port on your host machine
